compiler/actonc/test/syntaxerrors/err7.golden
Building file test/syntaxerrors/err7.act using temporary scratch directory

ERROR: Error when compiling err7 module: Syntax error

test/syntaxerrors/err7.act:1:6:
  |
1 | f : [a (Eq)] => (a,a) -> bool
  |      ^
unexpected 'a'
expecting type variable (upper case letter optionally followed by digits)

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

